tests/reference/asr-matrix_matmul_02-4e306e0.stderr
semantic error: matmul accepts second matrix of type Integer, Real or Complex if first matrix is of numeric type.
 --> tests/errors/matrix_matmul_02.f90:5:24
  |
5 |     print *, matmul(b, a)
  |                        ^ 
